istio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: catacatgo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catcatgo
spec:
  hosts:
  - "*"
  gateways:
  - catacatgo-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /index.html
    - uri:
        exact: /app.jsx
    route:
    - destination:
        host: ui
        subset: v1
  - match:
    - uri:
        prefix: /api/v1.0/search/
    route:
    - destination:
        host: backend
